# xlerobot-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _get_observation_test.ipynb  _get_observationp_yolo.ipynb  _start_vla_policy.ipynb  dataset_recorder.py  dataset_verifier.py  docker-compose.yml  push_dataset.py  pyproject.toml  record_with_yolo.py  yolo_camera.py  yolo_server.py
notebooks/: smolvla_training.ipynb
src/orchestrator/: __init__.py  config.py  ui.py
src/orchestrator/agent/: __init__.py  callbacks.py  graph.py  llm_factory.py  memory.py  state.py
src/orchestrator/capabilities/: __init__.py  camera.py  policies.yaml  registry.py  vla_policy.py  vlm.py  yolo.py
src/xlerobot_soft_orchestrator/: __init__.py  agent.py  capability.py  config.py  main.py  policies.yaml  ui.py
